enable javac-related reflection tricks in JPS if run on jre 16 and later
(cherry picked from commit 01706b091188e06a412e9a2adcbd9bf338ffabdd)

GitOrigin-RevId: 9dbf0bbd5b61d13c8087de628920cca84b1d8481